--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,8 +29,14 @@ android {
 }
 
 dependencies {
-
+    //네이버 지도
     implementation 'com.naver.maps:map-sdk:3.16.0'
+
+
+    //현재 위치 가져오기
+    implementation 'io.github.ParkSangGwon:tedpermission-rx3:3.3.0'
+    implementation 'com.google.android.gms:play-services-location:16.0.0'
+
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
