--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,13 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    sourceSets {
+        main {
+            assets {
+                srcDirs 'src\\main\\assets'
+            }
+        }
+    }
 }
 
 dependencies {
@@ -36,6 +43,7 @@ dependencies {
     //현재 위치 가져오기
     implementation 'io.github.ParkSangGwon:tedpermission-rx3:3.3.0'
     implementation 'com.google.android.gms:play-services-location:16.0.0'
+    implementation 'com.opencsv:opencsv:5.6'
 
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
