Check Pop Up Success

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".CheckActivity" android:parentActivityName=".MainActivity"></activity>
+        <activity android:name=".CheckActivity" android:theme="@android:style/Theme.Dialog"></activity>
         <activity android:name=".DrugActivity" android:parentActivityName=".MainActivity"></activity>
         <activity android:name=".HospitalActivity" android:parentActivityName=".MainActivity"></activity>
     </application>
