--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,12 +39,13 @@ dependencies {
     //네이버 지도
     implementation 'com.naver.maps:map-sdk:3.16.0'
 
-
     //현재 위치 가져오기
     implementation 'io.github.ParkSangGwon:tedpermission-rx3:3.3.0'
     implementation 'com.google.android.gms:play-services-location:16.0.0'
     implementation 'com.opencsv:opencsv:5.6'
 
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
